# patrix

./: .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
autocomplete/: radix.py  trie.py
autocomplete/tests/: test_radix.py  test_trie.py
docs/: index.md  install.md  requirements_docs.txt  usage.md
docs/api/: radix.md  trie.md
patrix/: __init__.py  radix.py
patrix/tests/: test_radix.py  test_trie.py
