[project]
name = "patrix"
dynamic = ["version"]
description = "A python package that uses a compressed prefix tree (aka trie or radix tree) to store a dictionary of 'correct' words and provides suggestions to complete partial words."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "Martin Beroiz", email = "martin.beroiz@ligo.org" }
]
license = { file = "LICENSE.txt" }
keywords = [
    "autocomplete",
    "radix",
    "trie",
    "prefix-tree",
    "compressed-trie",
    "patricia-tree",
    "search",
    "completion",
    "suggestions",
    "dictionary",
    "prefix-matching",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["patrix"]

[tool.setuptools.dynamic]
version = {attr = "patrix.__version__"}
